--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ ul {
   color: lightpink;
 }
 .temperature {
-  font-size: 100px;
+  font-size: 80px;
   color: #c7ffd8;
   text-shadow: -1px -1px 2px crimson, 1px 1px 2px lightpink;
 }
@@ -53,12 +53,12 @@ ul {
   border-width: 0px;
   border-radius: 35px;
   border: 2px solid #c7ffd8;
-  height: 75px;
-  width: 350px;
+  height: 50px;
+  width: 300px;
   margin: 25px 5px 25px;
   padding-left: 35px;
   font-family: "Amatic SC", cursive;
-  font-size: 33px;
+  font-size: 20px;
   color: gray;
   letter-spacing: 10px;
 }
@@ -84,13 +84,12 @@ h1#question {
 }
 
 #button {
-  padding: 7px;
-  width: 79px;
-  height: 79px;
+  width: 56px;
+  height: 56px;
   margin: 15px auto;
   padding: 15px 15px;
   border: 2px solid #c7ffd8;
-  border-radius: 40px;
+  border-radius: 35px;
   background-image: linear-gradient(
     to bottom right,
     #ffffff 15%,
@@ -98,7 +97,7 @@ h1#question {
     #c7ffd8 100%
   );
   box-shadow: 2px 3px 2px rgba(128, 128, 128, 0.295);
-  font-size: 30px;
+  font-size: 18px;
 }
 
 #button:hover {
@@ -123,11 +122,29 @@ h1#question {
   font-size: 15px;
 }
 
-span#hours-forecast {
+h6#hours-forecast {
   margin-right: 15px;
   font-family: "Amatic SC", cursive;
 }
 
 ul.info-list {
   padding-left: 0px;
+}
+
+div.forecastDisplay {
+  margin: 15px auto;
+}
+
+div.forecast.col {
+  display: flex;
+}
+
+.forecastTitle {
+  padding-left: 35px;
+  text-align: left;
+  text-decoration: overline;
+}
+
+div.forecastTitle {
+  margin-top: 30px;
 }
